@@ -188,6 +188,8 @@
     <!-- in unexpected plugin changes outside of maven-compiler-plugin. -->
     <skipCompile>false</skipCompile>
     <skipTestCompile>false</skipTestCompile>
+
+    <compiler.proc>none</compiler.proc>
   </properties>
 
   <build>
@@ -373,6 +375,7 @@
                 <exclude>**/com/azure/cosmos/implementation/apachecommons/**/*</exclude>
                 <exclude>**/com/azure/cosmos/implementation/guava25/**/*</exclude>
                 <exclude>**/com/azure/cosmos/implementation/guava27/**/*</exclude>
+                <exclude>**/com/azure/cosmos/encryption/implementation/mdesrc/**/*</exclude>
               </excludes>
             </configuration>
           </execution>
@@ -519,9 +522,6 @@
             <skipMain>${skipCompile}</skipMain>
             <skip>${skipTestCompile}</skip>
             <compilerArgs combine.children="append" combine.self="append">
-              <!-- Turn off annotation processing -->
-              <arg>-proc:none</arg>
-
               <!-- https://docs.oracle.com/javase/7/docs/technotes/tools/windows/javac.html#xlintwarnings -->
               <arg>-Xlint:cast</arg>
               <arg>-Xlint:classfile</arg>
@@ -542,6 +542,9 @@
               <arg>-Xlint:unchecked</arg>
               <arg>-Xlint:varargs</arg>
             </compilerArgs>
+
+            <!-- Default is annotation processing being off. -->
+            <proc>${compiler.proc}</proc>
           </configuration>
         </plugin>
 
@@ -1019,6 +1022,9 @@
               <argLine>
                 ${defaultSurefireArgLine}
                 ${javaModulesSurefireArgLine}
+                <!-- This is required as the Java 8 based implementation for ReflectionUtils may be loaded by IntelliJ when running tests with later versions of Java. -->
+                <!-- In later versions of Java, java.base doesn't open java.lang.invoke to azure-core, so it needs to be done with this directive. This only affects tests. -->
+                --add-opens java.base/java.lang.invoke=com.azure.core
                 ${additionalSurefireArgLine}
               </argLine>
             </configuration>
